--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,31 @@ code {
 .App-Content {
     margin: 40px 100px;
 }
+
+.Error-Reason-Content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    color: var(--main-color);
+}
+
+.Error-Title {
+    font-size: 200px;
+    font-weight: 700;
+
+    padding: 0;
+    margin: 50px auto 0;
+}
+
+.Error-Text {
+    font-weight: 500;
+    font-size: 24px;
+}
+
+.Error-Link {
+    color: inherit;
+    font-size: 18px;
+    margin-top: 100px;
+}
