--- a/src/components/misc/CardList/Card.css
+++ b/src/components/misc/CardList/Card.css
@@ -1,12 +1,26 @@
-.Card {
+.Card-Link {
     height: 340px;
     width: 340px;
+
+    color: inherit;
+    text-decoration: none;
+}
+
+.Card-Content {
+
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #FF6060;
     border-radius: 10px;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+}
+
+.Card-Image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 
 .Card-Title {
