--- a/src/components/appartment/SlideShow/comp.css
+++ b/src/components/appartment/SlideShow/comp.css
@@ -1,7 +1,8 @@
 .SlideShow-Container {
     background-color: red;
-    border-radius: 10px;
+    border-radius: 25px;
 
+    margin-top: 20px;
     height: 415px;
     width: 100%;
 }
