--- a/src/components/appartment/SlideShow/comp.css
+++ b/src/components/appartment/SlideShow/comp.css
@@ -1,8 +1,44 @@
 .SlideShow-Container {
-    background-color: red;
+    background-color: transparent;
     border-radius: 25px;
 
     margin-top: 20px;
     height: 415px;
     width: 100%;
+
+    position: relative;
+}
+
+.Button {
+    background-color: transparent;
+    border: none;
+
+    position: absolute;
+    top: 40%;
+    padding: 16px;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 0 3px 3px 0;
+}
+
+.Button.Next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.Button:hover {
+    background: rgba(0, 0, 0, .8);
+}
+
+.SlideShow-Bullets {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.SlideShow-Images {
+    z-index: -1;
+    overflow: hidden;
 }
