--- a/src/components/misc/CardList/Card.css
+++ b/src/components/misc/CardList/Card.css
@@ -1,26 +1,23 @@
 .Card-Link {
+    color: inherit;
+    text-decoration: none;
+
+    display: block;
+    position: relative;
+}
+
+.Card-Shape {
     height: 340px;
     width: 340px;
 
-    color: inherit;
-    text-decoration: none;
-}
-
-.Card-Content {
-
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #FF6060;
+    overflow: hidden;
     border-radius: 10px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
 }
 
 .Card-Image {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 10px;
 }
 
 .Card-Title {
@@ -28,4 +25,23 @@
     font-weight: 500;
     font-size: 18px;
     padding: 20px;
+    margin: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+
+    z-index: 3;
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+.Card-Title:hover {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #FF60602D;
 }
