--- a/src/index.css
+++ b/src/index.css
@@ -2,20 +2,12 @@
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    padding: 0;
     font-family: 'Montserrat', sans-serif;
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
-*, ::before, after {
+*, ::before, ::after {
     box-sizing: border-box;
 }
 
@@ -24,10 +16,17 @@ code {
     --high-size: 48px;
     --medium-size: 36px;
     --small-size: 24px;
+    --x-small-size: 12px;
 }
 
 .App-Content {
     margin: 40px 100px 0 100px;
+}
+
+@media screen and (max-width: 420px) {
+    .App-Content {
+        margin: 20px;
+    }
 }
 
 .Error-Reason-Content {
