--- a/src/components/misc/Banner/comp.css
+++ b/src/components/misc/Banner/comp.css
@@ -1,5 +1,6 @@
 .Banner {
     margin-top: 63px;
+    height: 223px;
     position: relative;
 }
 
@@ -9,10 +10,6 @@
     min-height: 111px;
     object-fit: cover;
     border-radius: 25px;
-}
-
-.Banner-Small {
-    height: 223px;
 }
 
 .Banner-Title {
@@ -28,4 +25,16 @@
     font-size: var(--high-size);
     font-weight: 500;
     color: white;
+}
+
+@media screen and (max-width: 420px) {
+    .Banner {
+        margin-top: 16px;
+        height: 111px;
+    }
+    .Banner-Title {
+        font-size: var(--small-size);
+        width: 217px;
+        left: 16px;
+    }
 }
