--- a/src/components/misc/CardList/Card.css
+++ b/src/components/misc/CardList/Card.css
@@ -45,3 +45,10 @@
 .Card-Title:hover {
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #FF60602D;
 }
+
+@media screen and (max-width: 420px) {
+    .Card-Shape {
+        width: 100%;
+        height: 255px;
+    }
+}
