Responsive Header, oublie de la propriété pour transformer le texte en majuscule ...

--- a/src/components/generics/Header/comp.css
+++ b/src/components/generics/Header/comp.css
@@ -28,5 +28,6 @@
     .Header-Link {
         font-size: var(--x-small-size);
         margin-left: 10px;
+        text-transform: uppercase;
     }
 }
