Amélioration du responsive non vu à cause du mode Mobile Chrome.

--- a/src/components/generics/Header/comp.css
+++ b/src/components/generics/Header/comp.css
@@ -18,10 +18,8 @@
     text-decoration: underline;
 }
 
-@media screen and (max-width: 420px) {
-    .Header {
-        height: 47px;
-    }
+@media screen and (max-width: 750px) {
+    .Header,
     .Header-Logo {
         height: 47px;
     }
