--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ body {
     justify-content: center;
     align-items: center;
 
+    text-align: center;
     color: var(--main-color);
 }
 
@@ -55,4 +56,25 @@ body {
     color: inherit;
     font-size: 18px;
     margin-top: 100px;
+}
+
+@media screen and (max-width: 750px) {
+    .Error-Reason-Content {
+        margin: 60px;
+    }
+    .Error-Title {
+        font-size: 124px;
+    }
+}
+
+@media screen and (max-width: 570px) {
+    .Error-Title {
+        font-size: 96px;
+    }
+    .Error-Text {
+        font-size: 18px;
+    }
+    .Error-Link {
+        font-size: var(--x-small-size);
+    }
 }
