--- a/src/components/misc/Detail/comp.css
+++ b/src/components/misc/Detail/comp.css
@@ -56,3 +56,15 @@
     margin-bottom: 10px;
     display: block;
 }
+
+@media screen and (max-width: 750px) {
+    .Detail-Card-Title {
+        font-size: 16px;
+        align-items: center;
+        height: 30px;
+    }
+    .Detail-Card-Content {
+        font-size: 14px;
+        padding: 18px 12px;
+    }
+}
